# serio

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
include/: serio.h++
src/: serio.c++
tests/: CMakeLists.txt  compile_test.cmake  runtime_test.cmake
